--- a/src/sass/objects/_popovers.scss
+++ b/src/sass/objects/_popovers.scss
@@ -46,9 +46,9 @@
 // Styleguide: Popovers
 
 .#{$ns}-popover {
+	@include xui-box-shadow-border($xui-shadow-depth-lift);
 	background-color: $xui-color-white;
 	border-radius: $xui-radius;
-	box-shadow: $xui-shadow-depth-lift;
 	position: relative;
 }
 
